# Opengl_game

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
dependencies/glad/: glad.h
src/: config.cpp  config.h  main.cpp
src/helpers/: ai.cpp  ai.h  camera.cpp  camera.h  cube.cpp  cube.h  glad.c  imgui_track_players.cpp  input.cpp  input.h  plane.cpp  plane.h  player.cpp  player.h  quad.cpp  quad.h  shader.cpp  shader.h  triangle.cpp  triangle.h
src/shaders/: fragment.frag  plane.frag  plane.vert  player.frag  player.vert  screen.vert  vertex.vert
